--- a/server/yihunzeServer/bin/gameserver/debug/gameserver.cfg
+++ b/server/yihunzeServer/bin/gameserver/debug/gameserver.cfg
@@ -31,3 +31,14 @@ databaseportnumber = 3306
  
 
 
+#状态服务器ip
+stateserverip = 127.0.0.1
+
+#状态服务器端口号
+stattserverportnumber = 9959
+
+#状态服务器密码
+statserverpassword = 8889
+
+#游戏服务器线路名.用于区分第几线
+gameservername = 月光飞盒
