完成了整个用户登入测试,
git-svn-id: https://172.16.100.245:443/svn/yihunze@15 6ec6bfb8-d06b-6c47-a642-727affc0819e

--- a/server/yihunzeServer/Mainlib/NetWork.vcproj
+++ b/server/yihunzeServer/Mainlib/NetWork.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(MYSQL)/include&quot;;./include;&quot;$(RakNet4.0)/Source&quot;"
+				AdditionalIncludeDirectories="&quot;$(MYSQL)/include&quot;;./include;&quot;$(RakNet4.0)/Source&quot;;../yihunzeServer"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XMAIN_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -201,6 +201,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\source\NetWorkClient.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\source\NetWorkServer.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\source\pch.cpp"
 				>
 				<FileConfiguration
@@ -219,6 +227,10 @@
 						UsePrecompiledHeader="1"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\source\RemoteServer.cpp"
+				>
 			</File>
 			<File
 				RelativePath=".\source\xLogManager.cpp"
@@ -255,7 +267,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\NetWorkClient.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\NetWorkServer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\pch.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\RemoteServer.h"
 				>
 			</File>
 			<File
