--- a/server/yihunzeServer/bin/stateserver/debug/gameserver.cfg
+++ b/server/yihunzeServer/bin/stateserver/debug/gameserver.cfg
@@ -4,16 +4,6 @@
 [月光宝盒]
 ip=127.0.0.1
 servername=月光
-password=111
-
-[月光宝盒2]
-ip=124.0.0.1
-servername=月光宝盒2
-password=111
-
-
-[月光宝盒3]
-ip=124.0.0.1
-servername=月光宝盒2
-password=111
+password=8889
+portnumber=6698
 
