--- a/server/yihunzeServer/bin/gameserver/debug/gameserver.cfg
+++ b/server/yihunzeServer/bin/gameserver/debug/gameserver.cfg
@@ -14,21 +14,6 @@ accountpassword = 8889
 accountportnumber = 9698
 
 
-#游戏数据库ip
-databaseserver = 127.0.0.1
-
-#游戏数据库名字
-databasename = yinhunzedb
-
-#游戏数据库用户名
-databaseuser = root
-
-#游戏数据库密码
-databasepassword = 111
-
-#游戏数据库端口号
-databaseportnumber = 3306
- 
 
 
 #状态服务器ip
@@ -42,3 +27,15 @@ statserverpassword = 8889
 
 #游戏服务器线路名.用于区分第几线
 gameservername = 月光飞盒
+
+
+
+
+#游戏数据库服务器设置
+#游戏数据库服务器
+gamedatabaseserver = 127.0.0.1
+
+#游戏数据库服务器端口号
+gamedatabaseserverportnumber = 7699
+#游戏数据库服务器密码
+gamedatabaseserverpassword = 8889
