修改了状态服务器。
git-svn-id: https://172.16.100.245:443/svn/yihunze@20 6ec6bfb8-d06b-6c47-a642-727affc0819e

--- a/server/yihunzeServer/GameServer/GameServer.vcproj
+++ b/server/yihunzeServer/GameServer/GameServer.vcproj
@@ -192,6 +192,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\playermanager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stateServer.cpp"
 				>
 			</File>
@@ -215,6 +219,10 @@
 			</File>
 			<File
 				RelativePath=".\pch.h"
+				>
+			</File>
+			<File
+				RelativePath=".\playerManager.h"
 				>
 			</File>
 			<File
